syntax = "proto3";
import "pub.proto";

package cmessage;
option go_package = "./;cmessage";

// 初始化玩家
// 游戏开始
// 游戏结束
// 时间
message GameTimeReq {
    Ipacket PacketHead = 1;

}

message GameTimeResp {
    Ipacket PacketHead = 1;
    //返回服务器时间，long 类型时间戳
    int64 time = 2;
}








