syntax = "proto3";
import "message.proto";

package message;
option go_package = "./;message";
//登录
message C_G_LoginResquest{
    Ipacket PacketHead = 1;
	int64 Key = 2;
}

//登录
message G_C_LoginResponse{
    Ipacket PacketHead = 1;
	int64 Key = 2;
}

//登录
message C_A_LoginRequest{
    Ipacket PacketHead = 1;
    string AccountName = 2;
	string Password = 3;
	string BuildNo = 5;
	int64 Key = 6;
	//uint32 Crc = 7;
}

//登录反馈
message A_C_LoginResponse{
    Ipacket PacketHead = 1;
    int32  Error = 2;
    string AccountName = 4;
}

//注册
message C_A_RegisterRequest{
    Ipacket PacketHead = 1;
    string AccountName = 2;
    string Password = 3;
}

//注册反馈
message A_C_RegisterResponse{
    Ipacket PacketHead = 1;
    int32	Error = 2;
}

//创角
message C_W_CreatePlayerRequest{
    Ipacket PacketHead = 1;
    string PlayerName = 2;
    int32  Sex = 3;
}

//创角反馈
message W_C_CreatePlayerResponse{
    Ipacket PacketHead = 1;
    int32 Error = 2;
    int64 PlayerId = 3;
}

//登录游戏
message C_W_Game_LoginRequset{
    Ipacket PacketHead = 1;
    int64	PlayerId =2;
}

//选角反馈
message W_C_SelectPlayerResponse{
    Ipacket PacketHead = 1;
    int64	AccountId = 2;
    repeated PlayerData PlayerData = 3;
}

message C_G_LogoutResponse{
    Ipacket PacketHead = 1;
}

//聊天
message C_W_ChatMessage{
    Ipacket PacketHead = 1;
    int64	Sender = 2;
    int64	Recver = 3;
    int32	MessageType = 4;
    string	Message = 5;
}

message W_C_ChatMessage{
    Ipacket PacketHead = 1;
    int64	Sender = 2;
    string	SenderName = 3;
    int64	Recver = 4;
    string	RecverName = 5;
    int32	MessageType = 6;
    string	Message = 7;
}

message W_C_Test{
    Ipacket PacketHead = 1;
    int64	PlayerId =2;
    repeated int32 Recv = 3;
}